[package]
name = "ProxyFinder"
version = "0.1.0"
authors = ["DoctorEenot"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4" 
libc = "0.2.98"
mio = { version = ">=0.7.13", features = ["tcp","os-poll"] }

